# tempoch-cpp

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  clang_format.sh  coverage.xml  run-ci.sh
.github/workflows/: ci-build-test-docs.yml  ci-coverage.yml  ci-lint.yml  ci-package.yml  ci-release.yml  ci.yml
cmake/: tempoch_cppConfig.cmake.in
docs/: Doxyfile.in  mainpage.md
examples/: 01_quickstart.cpp  02_scales.cpp  03_formats.cpp  04_periods.cpp  06_runtime_tables.cpp  07_conversions.cpp  08_gnss_scales.cpp  09_gnss_week.cpp  10_transformations.cpp  time_example.cpp  timescales.cpp
include/tempoch/: civil_time.hpp  constants.hpp  data_status.hpp  eop.hpp  ffi_core.hpp  gnss_week.hpp  legacy_time.hpp  period.hpp  scales.hpp  tempoch.hpp  time.hpp  time_base.hpp
include/tempoch/formats/: base.hpp  formats.hpp  gps.hpp  j2000s.hpp  jd.hpp  mjd.hpp  unix.hpp
include/tempoch/scales/: base.hpp  bdt.hpp  et.hpp  gpst.hpp  gst.hpp  qzsst.hpp  scales.hpp  tai.hpp  tcb.hpp  tcg.hpp  tdb.hpp  tt.hpp  ut1.hpp  utc.hpp
scripts/: build.sh  ci.sh  coverage.sh  docs.sh  fmt.sh  lib.sh  lint.sh  test.sh
tests/: test_constants.cpp  test_data_status.cpp  test_gnss_week.cpp  test_headers.cpp  test_new_scales.cpp  test_period.cpp  test_time.cpp
